[project]
name = "streamlit-rag-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.24",
    "pypdf>=5.6.1",
    "streamlit>=1.46.0",
    "textloader>=0.0.9",
]
